--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container left">
       <span class="date">2020</span>
       <div class="content">
-        <img src="https://via.placeholder.com/300x80?text=Your+Photo" alt="写真">
+        <img src="https://www.toyo.ac.jp/assets/research/cdws_top.jpg" alt="写真">
         <p>●●大学入学、コンピュータサイエンス専攻</p>
       </div>
     </div>
@@ -94,10 +94,11 @@
     <div class="container left">
       <span class="date">2023</span>
       <div class="content">
-        <img src="https://via.placeholder.com/300x80?text=Award" alt="受賞写真">
+        <img src="https://www.toyo.ac.jp/assets/research/cdws_top.jpg" alt="受賞写真">
         <p>ハッカソンで最優秀賞を受賞。</p>
       </div>
     </div>
   </div>
 </body>
+
 </html>
