--- a/index.html
+++ b/index.html
@@ -2,103 +2,181 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>かっこいいタイムライン</title>
+  <title>スクロールタイムライン改良版</title>
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
       background: #f5f5fc;
+      font-family: 'Roboto', sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 40px 0;
+    }
+    .timeline-wrap {
+      display: flex;
+      justify-content: center;
     }
     .timeline {
       position: relative;
-      max-width: 600px;
-      margin: 0 auto;
+      width: 40px;
+      margin-right: 40px;
+      min-height: 5200px;
     }
-    .timeline::after {
-      content: '';
+    .timeline-line {
       position: absolute;
-      width: 4px;
-      background-color: #7f8ce3;
-      top: 0;
-      bottom: 0;
-      left: 30px;
-      margin-left: -2px;
-    }
-    .container {
-      padding: 20px 40px;
-      position: relative;
-      background-color: inherit;
-      width: 100%;
-    }
-    .container.left {
-      left: 0;
-    }
-    .container.right {
       left: 50%;
-    }
-    .date {
-      position: absolute;
-      width: 80px;
-      left: -60px;
-      top: 20px;
-      font-weight: bold;
-      color: #7f8ce3;
-    }
-    .content {
-      background: #fff;
-      padding: 12px 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(127,140,227,0.15);
-      margin-bottom: 25px;
-      position: relative;
-    }
-    .container::before {
-      content: "";
-      position: absolute;
-      width: 18px;
-      height: 18px;
-      right: -8px;
-      background-color: #7f8ce3;
-      border: 3px solid #f5f5fc;
-      top: 24px;
-      border-radius: 50%;
+      top: 35px;
+      width: 4px;
+      background: #7f8ce3;
+      border-radius: 2px;
+      transform: translateX(-50%);
+      height: 0;
+      transition: height 0.5s cubic-bezier(.4,0,.2,1);
       z-index: 1;
     }
-    /* 画像が使いたい場合 */
-    .content img { max-width: 100%; border-radius: 8px; margin-bottom: 8px;}
-
-    @media screen and (max-width: 600px) {
-      .timeline { max-width: 100%; }
-      .container { padding: 20px; }
-      .date { left: -40px; width: 60px;}
+    .dot {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 20px;
+      height: 20px;
+      background: #fff;
+      border: 4px solid #7f8ce3;
+      border-radius: 50%;
+      box-shadow: 0 2px 6px rgba(127,140,227,0.08);
+      z-index: 2;
+    }
+    .blocks {
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+    }
+    .block {
+      width: 600px;
+      height: 500px;
+      background: #fff;
+      border-radius: 14px;
+      box-shadow: 0 2px 18px rgba(127,140,227,0.07);
+      display: flex;
+      align-items: center;
+      padding: 24px;
+      gap: 32px;
+      position: relative;
+    }
+    .block img {
+      width: 300px;
+      height: 420px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+    .block-content { flex: 1; }
+    @media (max-width: 900px) {
+      .block { flex-direction: column; width: 100%; height: auto; }
+      .blocks { gap: 60px; }
+      .timeline { margin-right: 12px;}
     }
   </style>
 </head>
 <body>
-  <h2>My Timeline</h2>
-  <div class="timeline">
-    <div class="container left">
-      <span class="date">2020</span>
-      <div class="content">
-        <img src="https://www.toyo.ac.jp/assets/research/cdws_top.jpg" alt="写真">
-        <p>●●大学入学、コンピュータサイエンス専攻</p>
-      </div>
+  <h2 style="text-align:center">Scrollで線が伸びるタイムラインデモ</h2>
+  <div class="timeline-wrap">
+    <div class="timeline" id="timeline">
+      <!-- JSでドットも生成して良いが、手打ち例 -->
+      <div class="dot" style="top: 35px;"></div>
+      <div class="dot" style="top: 600px;"></div>
+      <div class="dot" style="top: 1190px;"></div>
+      <div class="dot" style="top: 1780px;"></div>
+      <div class="dot" style="top: 2370px;"></div>
+      <div class="dot" style="top: 2960px;"></div>
+      <div class="dot" style="top: 3550px;"></div>
+      <div class="dot" style="top: 4140px;"></div>
+      <div class="dot" style="top: 4730px;"></div>
+      <div class="dot" style="top: 5320px;"></div>
+      <div class="timeline-line" id="timeline-line"></div>
     </div>
-    <div class="container left">
-      <span class="date">2021</span>
-      <div class="content">
-        <p>チーム開発プロジェクトに参加。全国大会出場。</p>
+    <div class="blocks">
+      <div class="block">
+        <img src="https://placehold.jp/300x420.png?text=Photo1" alt="photo1">
+        <div class="block-content">
+          <h3>タイトル1</h3>
+          <p>説明文1が入ります。</p>
+        </div>
       </div>
-    </div>
-    <div class="container left">
-      <span class="date">2023</span>
-      <div class="content">
-        <img src="https://www.toyo.ac.jp/assets/research/cdws_top.jpg" alt="受賞写真">
-        <p>ハッカソンで最優秀賞を受賞。</p>
+      <div class="block">
+        <img src="https://placehold.jp/300x420.png?text=Photo2" alt="photo2">
+        <div class="block-content"><h3>タイトル2</h3><p>説明文2。</p></div>
+      </div>
+      <div class="block">
+        <img src="https://placehold.jp/300x420.png?text=Photo3" alt="photo3">
+        <div class="block-content"><h3>タイトル3</h3><p>説明文3。</p></div>
+      </div>
+      <div class="block">
+        <img src="https://placehold.jp/300x420.png?text=Photo4" alt="photo4">
+        <div class="block-content"><h3>タイトル4</h3><p>説明文4。</p></div>
+      </div>
+      <div class="block">
+        <img src="https://placehold.jp/300x420.png?text=Photo5" alt="photo5">
+        <div class="block-content"><h3>タイトル5</h3><p>説明文5。</p></div>
+      </div>
+      <div class="block">
+        <img src="https://placehold.jp/300x420.png?text=Photo6" alt="photo6">
+        <div class="block-content"><h3>タイトル6</h3><p>説明文6。</p></div>
+      </div>
+      <div class="block">
+
+
+<img src="https://placehold.jp/300x420.png?text=Photo7" alt="photo7">
+        <div class="block-content"><h3>タイトル7</h3><p>説明文7。</p></div>
+      </div>
+      <div class="block">
+        <img src="https://placehold.jp/300x420.png?text=Photo8" alt="photo8">
+        <div class="block-content"><h3>タイトル8</h3><p>説明文8。</p></div>
+      </div>
+      <div class="block">
+        <img src="https://placehold.jp/300x420.png?text=Photo9" alt="photo9">
+        <div class="block-content"><h3>タイトル9</h3><p>説明文9。</p></div>
+      </div>
+      <div class="block">
+        <img src="https://placehold.jp/300x420.png?text=Photo10" alt="photo10">
+        <div class="block-content"><h3>タイトル10</h3><p>説明文10。</p></div>
       </div>
     </div>
   </div>
-</body>
+  
+<script>
+const line = document.getElementById('timeline-line');
+const timeline = document.getElementById('timeline');
+const dots = Array.from(document.querySelectorAll('.timeline .dot'));
 
+// 下から50pxの位置でそのドットまで線を伸ばす
+function onScroll() {
+  let maxIndex = -1;
+  let maxHeight = 0;
+  const threshold = window.innerHeight - 50; // 画面下から50px
+
+  dots.forEach((dot, i) => {
+    const rect = dot.getBoundingClientRect();
+    if (rect.top <= threshold) {
+      maxIndex = i;
+      // ドットの中心まで線を伸ばす（.timeline-lineはtop:35px固定なので、ドットのoffsetTopとの相対）
+      // ドットのoffsetTop+dot.offsetHeight/2 - timeline-lineのtop(35)
+      const dotY = dot.offsetTop + dot.offsetHeight/2 - 35;
+      maxHeight = dotY;
+    }
+  });
+
+  // 線を伸ばす
+  if (maxIndex >= 0) {
+    line.style.height = `${maxHeight}px`;
+  } else {
+    // まだどのドットも条件を満たさないなら線はゼロ
+    line.style.height = `0px`;
+  }
+}
+
+window.addEventListener('scroll', onScroll);
+window.addEventListener('resize', onScroll);
+window.addEventListener('DOMContentLoaded', () => {
+  setTimeout(onScroll, 150);
+});
+</script>
+</body>
 </html>
