--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>スクロールタイムライン改良版</title>
+  <title>History</title>
   <style>
     body {
       background: #f5f5fc;
@@ -76,7 +76,7 @@
   </style>
 </head>
 <body>
-  <h2 style="text-align:center">Scrollで線が伸びるタイムラインデモ</h2>
+  <h2 style="text-align:center">HISTORY</h2>
   <div class="timeline-wrap">
     <div class="timeline" id="timeline">
       <!-- JSでドットも生成して良いが、手打ち例 -->
@@ -180,3 +180,4 @@ window.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
